Added expect parameter

--- a/templates/init.conf.erb
+++ b/templates/init.conf.erb
@@ -3,6 +3,9 @@
 start on <%= @start_on %>
 stop on <%= @stop_on %>
 
+<% if @expect -%>
+expect <%= @expect %>
+<% end -%>
 <% chpst_args = "" -%>
 <% if @chdir -%>
 chdir <%= @chdir %>
