upstart requires both soft and hard limits

--- a/templates/init.conf.erb
+++ b/templates/init.conf.erb
@@ -30,7 +30,7 @@ env <%= "#{k}=#{v}" %>
 <% end -%>
 
 <% @limits.each do |k,v| -%>
-limit <%= k %> <%= v %>
+limit <%= k %> <%= v %> <%= v %>
 <% end -%>
 
 <% if @exec -%>
