fixed end script

--- a/templates/init.conf.erb
+++ b/templates/init.conf.erb
@@ -44,7 +44,7 @@ limit <%= k %> <%= v %> <%= v %>
 <% elsif opts[:script] -%>
 <%= hook %> script
 <%= opts[:script] %>
-end
+end script
 <% end -%>
 <% end -%>
 <% if @exec -%>
